--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,17 +4,17 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
+  @media (max-width:1000px) {
+    padding-bottom: 0;
+  }
+
   .container {
     display: flex;
     align-items: center;
     justify-content: space-between;
 
-    @media (max-width: 645px) {
+    @media (max-width:1000px) {
       flex-direction: column;
-
-      .header__cart {
-        margin-top: 20px;
-      }
     }
   }
 
