--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .content {
-  padding: 40px 0;
+  padding: 40px 20px;
 
   &__error-info {
     margin: 100px auto;
@@ -100,6 +100,7 @@ body {
 
     @media (max-width: 820px) {
       flex-direction: column-reverse;
+
       .categories {
         margin-top: 30px;
       }
@@ -114,8 +115,13 @@ body {
   &--cart {
     max-width: 820px;
     margin: 90px auto;
+
+    @media (max-width: 1000px) {
+      margin-top: 0;
+    }
+
     .content__title {
-      margin: 0;
+      margin: 30px;
     }
   }
 }
@@ -125,12 +131,23 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 500px) {
+      margin-bottom: -20px;
+      flex-direction: column;
+    }
   }
 
   .content__title {
     display: flex;
     align-items: center;
     font-size: 32px;
+
+    @media (max-width: 500px) {
+      font-size: 24px;
+      margin: 0;
+      margin-bottom: 20px;
+    }
 
     svg {
       position: relative;
@@ -156,6 +173,10 @@ body {
       margin-left: 7px;
       color: #b6b6b6;
       font-size: 18px;
+
+      @media (max-width: 500px) {
+        font-size: 15px;
+      }
     }
 
     span,
@@ -182,20 +203,32 @@ body {
 
   &__item {
     display: flex;
-    width: 100%;
-    border-top: 1px solid $gray-line;
+    align-items: center;
+    justify-content: space-between;
     padding-top: 30px;
     margin-top: 30px;
 
-    &-img {
+    @media (max-width: 900px) {
+      flex-direction: column;
+    }
+
+    &-info {
       display: flex;
       align-items: center;
-      margin-right: 15px;
-      width: 10%;
+      justify-content: center;
 
+      b {
+        font-weight: bold;
+        font-size: 22px;
+        letter-spacing: 0.01em;
+      }
+    }
+
+    &-img {
       img {
         width: 80px;
         height: 80px;
+        margin-right: 30px;
       }
     }
 
@@ -203,7 +236,8 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: 40%;
+      align-items: flex-start;
+      width: 50%;
 
       h3 {
         font-weight: bold;
@@ -222,7 +256,10 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      width: 13%;
+
+      & > b {
+        padding: 0 10px;
+      }
 
       &-minus {
         svg {
@@ -234,21 +271,21 @@ body {
         &--disabled {
           opacity: 0.4;
           border-color: #787878;
-          
+
           &:active {
             transform: none;
-          };
+          }
 
           &:hover {
             background-color: transparent;
 
             svg path {
-              fill:  #787878;
+              fill: #787878;
             }
           }
 
           svg path {
-            fill:  #787878;
+            fill: #787878;
           }
         }
       }
@@ -259,15 +296,14 @@ body {
     }
 
     &-price {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 33%;
+      margin-right: 30px;
+      font-size: 22px;
+      font-weight: 700;
+      letter-spacing: 0.01em;
 
-      b {
-        font-weight: bold;
-        font-size: 22px;
-        letter-spacing: 0.01em;
+      @media (max-width: 900px) {
+        margin-left: auto;
+        margin-right: -15px;
       }
     }
 
@@ -276,6 +312,10 @@ body {
       align-items: center;
       justify-content: flex-end;
       width: 4%;
+
+      @media (max-width: 900px) {
+        margin-top: -174px;
+      }
 
       .button {
         border-color: darken($color: $gray-line, $amount: 10);
@@ -304,12 +344,44 @@ body {
     }
   }
 
+  &__name {
+    display: flex;
+    border-top: 1px solid $gray-line;
+    width: 80%;
+
+    @media (max-width: 900px) {
+      margin-right: auto;
+      padding-bottom: 30px;
+      width: 100%;
+    }
+  }
+
+  &__info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50%;
+
+    @media (max-width: 900px) {
+      width: 100%;
+    }
+
+    @media (max-width: 500px) {
+      width: 100%;
+    }
+  }
+
   &__bottom {
     margin: 50px 0;
 
     &-details {
       display: flex;
       justify-content: space-between;
+
+      @media (max-width: 550px) {
+        flex-direction: column;
+        line-height: 50px;
+      }
 
       span {
         font-size: 22px;
@@ -327,18 +399,26 @@ body {
       justify-content: space-between;
       margin-top: 40px;
 
+      @media (max-width: 550px) {
+        flex-direction: column;
+        align-items: center;
+      }
+
       .go-back-btn {
         display: flex;
         align-items: center;
         justify-content: center;
         width: 210px;
-
         border-color: darken($color: $gray-line, $amount: 10);
+
+        @media (max-width: 550px) {
+          margin-bottom: 20px;
+          height: 56px;
+        }
 
         span {
           color: darken($color: $gray-line, $amount: 20);
           font-weight: 500;
-          font-weight: 600;
         }
 
         &:hover {
