--- a/src/components/NotFoundBlock/NotFoundBlock.module.scss
+++ b/src/components/NotFoundBlock/NotFoundBlock.module.scss
@@ -2,7 +2,11 @@
     padding: 100px;
     text-align: center;
     max-width: 750px;
-    margin: 0 auto;
+    margin: 0 auto; 
+    
+    @media (max-width: 550px) {
+      padding: 100px;
+    }
 
     span {
         font-size: 64px;
