--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -452,11 +452,17 @@ body {
     margin: 80px auto;
     width: 620px;
     text-align: center;
+    max-width: 100%;
+
+    @media (max-width: 850px) {
+      margin: 40px auto;
+    }
 
     h2 {
       font-size: 36px;
       font-weight: 700;
       margin-bottom: 15px;
+      line-height: 1.4;
     }
 
     p {
